@@ -6,6 +6,7 @@ All notable changes to this project will be documented in this file.
   - i18n refactoring
   - people can now choose the language displayed - fix #171
   - fix place "[Object]" issue - #194
+  - live search
   - admin could choose a custom fallback image - fix #195
   - it is now possible NOT to enter the end time of an event - fix #188
   - Wordpress plugin now supports MU installation
@@ -17,7 +18,8 @@ All notable changes to this project will be documented in this file.
   - new hide calendar option
   - new hide thumbs from homepage option
   - complete oauth2 refactoring
-  - fix random restart
+  - fix random restart while downloading random media
+  - fix mobile dialog layout
 
 
 ### 1.5.6 - 22 set '22
